f(firmware) tcp transport with pb

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -13,3 +13,5 @@ platform = espressif32
 board = lolin_d32
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+    bblanchon/ArduinoJson@^6.19.4
