f(firmware) write servo positions

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 lib_deps = 
     bblanchon/ArduinoJson@^6.19.4
     links2004/WebSockets@^2.3.7
+    madhephaestus/ESP32Servo@^0.11.0
