--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:lolin_d32]
+[env:firebeetle32]
 platform = espressif32
-board = lolin_d32
+board = firebeetle32
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
