--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -17,3 +17,6 @@ lib_deps =
     bblanchon/ArduinoJson@^6.19.4
     links2004/WebSockets@^2.3.7
     madhephaestus/ESP32Servo@^0.11.0
+    envirodiy/SensorModbusMaster@^0.6.8
+    https://github.com/rfetick/MPU6050_light
+    https://github.com/MR-Nejati/HX711-multi#patch-1
