--- a/Final Report/.vscode/settings.json
+++ b/Final Report/.vscode/settings.json
@@ -4,10 +4,12 @@
         "EASA",
         "Joao",
         "Lisboa",
+        "MOSFET",
         "Mechatronic",
         "Prandtl",
         "TECQUIPMENT",
-        "Tecnico"
+        "Tecnico",
+        "WIFI"
     ],
     "cSpell.words": [
         "JKUAT"
