--- a/Final Report/.vscode/settings.json
+++ b/Final Report/.vscode/settings.json
@@ -1,11 +1,18 @@
 {
     "cSpell.ignoreWords": [
+        "Andanje",
         "Arduino",
+        "DAQA",
         "EASA",
         "Joao",
+        "Jomo",
+        "Kerata",
         "Lisboa",
         "MOSFET",
         "Mechatronic",
+        "Mogire",
+        "Muchiri",
+        "Oina",
         "Prandtl",
         "TECQUIPMENT",
         "Tecnico",
